[project]
name = "benchtrack"
version = "0.1.0"
description = "Benchmarking point tracking for pose estimation"
readme = "README.md"
authors = [
    { name = "Arash Sal Moslehian", email = "arashmoslehian@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datajoint>=0.14.3",
    "graphviz>=0.20.3",
    "imageio[ffmpeg]>=2.36.0",
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pydot>=3.0.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tables>=3.10.1",
    "torch>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
